Fix figure caption spacing issue in #42

--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,7 @@
     margin-bottom: 75px;
     text-align: center;
 }
+
+.quarto-figure {
+  margin-top: -3em;
+}
